6/6/2006
- Applied Ernst Naezer patch fixing problem when cc / bcc fields were null

2/2/2006

- Added .Net 2.0 Support for the original EmailSender
- Added a new .Net 2.0 specific EmailSender interface.
- - .Net 2.0 does not have a Fields Property
- Added a MockSender for the EmailSender2 component
- EmailSender2 has an optional parameter for the config file: Port which takes an integer.


Alpha Version 1.0.0
- First release

Future modifications - after the first release - shall be tracked in this file

10.22.2005 - Added Authentication Features
- Added a Fields property that maps to the MailMessage Fields property
- Added public void AddAuthentication(string username, string password)